# StorageFastAPI

./: pyproject.toml  test.py
storage-application/: .env.template  alembic.ini  main.py
storage-application/alembic/: env.py
storage-application/alembic/versions/: 39fa5b485edc_column_price_for_one.py  44bc71bd6c50_add_tables_product_order_.py
storage-application/api/: __init__.py
storage-application/api/v1/: routes.py
storage-application/api/v1/orders/: dependencies.py  router.py  schemas.py
storage-application/api/v1/products/: dependencies.py  router.py  schemas.py
storage-application/core/: config.py
storage-application/core/models/: __init__.py  base.py  db_helper.py  order.py  order_product_association.py  product.py
storage-application/core/repositories/: __init__.py  base_repo.py  orders_repo.py  products_repo.py
storage-application/utils/: __init__.py
